画像の比率　ページ内の特定の場所にジャンプ　修正

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="inner">
         <nav class="header_nav">
           <ul>
-            <li><a href="">ABOUT<span>概要</span></a></li>
-            <li><a href="">DETAIL<span>詳細</span></a></li>
-            <li><a href="">PROFILE<span>紹介</span></a></li>
+            <li><a href="#about">ABOUT<span>概要</span></a></li>
+            <li><a href="#detail">DETAIL<span>詳細</span></a></li>
+            <li><a href="#profile">PROFILE<span>紹介</span></a></li>
             
           </ul>
         </nav>
@@ -78,13 +78,13 @@
         </div>
       </section>
 
-      <section class="profile section">
+      <section class="profile section" id="profile">
         <div class="inner">
           <h2 class="title">PROFILE<span>プロフィール</span></h2>
           <div class="frame_profile profile_bg">
             <div class="intro">
               <div class="intro_img">
-                <img src="img/01.jpg" width="80" height="80" alt="プロフィール画像">
+                <img src="img/01.jpg" alt="プロフィール画像">
               </div>
               <div class="txt">
                 <h3><span>プロ講師</span>〇〇〇〇</h3>
@@ -123,7 +123,7 @@
           <div class="frame_profile profile_bg">
             <div class="intro">
               <div class="intro_img">
-                <img src="img/041c8e89b678b46731ac2144bc87c2e7-1-1024x640.jpg" width="80" height="80" alt="プロフィール画像">
+                <img src="img/041c8e89b678b46731ac2144bc87c2e7-1-1024x640.jpg" alt="プロフィール画像">
               </div>
               <div class="txt">
                 <h3><span>プロ講師</span>〇〇〇〇</h3>
